--- a/.env.prod
+++ b/.env.prod
@@ -1,10 +1,10 @@
 APP_NAME=Laravel
 APP_ENV=prod
-APP_KEY=
+APP_KEY=base64:qbSJx94yuJRgTwLJVgDs/hGR6HxSVqqJ+lJZepcQkns=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://165.22.206.23
 
-APP_PORT=82
+APP_PORT=80
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -14,9 +14,9 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3308
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=secret
-DB_ROOT_PASSWORD=password
+DB_USERNAME=doravel
+DB_PASSWORD=wn8d7fqehfojwsdkjnksdf
+DB_ROOT_PASSWORD=wn8d7fqehfojwsdkjnksdf
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
