--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,6 +10,7 @@ services:
             APP_ENV: ${APP_ENV:-local}
         volumes:
             - .:/var/www
+            - /mnt/volume_ams3_01/:/var/www/storage/app/public/volume_ams3_01
         ports:
             - ${APP_PORT:-80}:80
         networks:
