--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_KEY=base64:qnVH3z/j454gX2/7fYcC5TEWTZDommwlIo8s7HLF5qE=
+APP_DEBUG=false
 APP_URL=http://localhost
 
-APP_PORT=80
+APP_PORT=83
 APP_SSL_PORT=443
 
 LOG_CHANNEL=stack
@@ -15,8 +15,8 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=secret
+DB_USERNAME=doravel
+DB_PASSWORD=password
 DB_ROOT_PASSWORD=password
 
 BROADCAST_DRIVER=log
@@ -63,24 +63,24 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # PHPMYADMIN
-PHPMYADMIN_PORT=8080
+PHPMYADMIN_PORT=8088
 
 # SOKETI
-SOKETI_PORT=6001
-SOKETI_METRICS_SERVER_PORT=9601
+SOKETI_PORT=6008
+SOKETI_METRICS_SERVER_PORT=9631
 
 # MEILISEARCH
-MEILISEARCH_PORT=7700
+MEILISEARCH_PORT=7230
 
 # MAILPIT
-MAILPIT_DASHBOARD_PORT=8025
+MAILPIT_DASHBOARD_PORT=8036
 
 # MINIO
 MINIO_ROOT_USER=minio
 MINIO_ROOT_PASSWORD=minio123
 
 # MINIO CONSOLE
-MINIO_CONSOLE_PORT=8900
+MINIO_CONSOLE_PORT=8280
 
 # PHP
 PHP_OPCACHE_ENABLE=0
