--- a/.env
+++ b/.env
@@ -1,23 +1,20 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:qnVH3z/j454gX2/7fYcC5TEWTZDommwlIo8s7HLF5qE=
-APP_DEBUG=false
-APP_URL=http://localhost
-
-APP_PORT=83
-APP_SSL_PORT=443
+APP_KEY=base64:Ob2KyNqPlgcaTooflJjwdApN3h4DNI9kGfiUzOQumCM=
+APP_DEBUG=true
+APP_URL=http://localhost:8006
+APP_PORT=8006
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=doravel
-DB_PASSWORD=password
-DB_ROOT_PASSWORD=password
+DB_DATABASE=subirvideos
+DB_USERNAME=root
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -26,9 +23,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=mencached
+MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=redis
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -61,31 +58,3 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-# PHPMYADMIN
-PHPMYADMIN_PORT=8088
-
-# SOKETI
-SOKETI_PORT=6008
-SOKETI_METRICS_SERVER_PORT=9631
-
-# MEILISEARCH
-MEILISEARCH_PORT=7230
-
-# MAILPIT
-MAILPIT_DASHBOARD_PORT=8036
-
-# MINIO
-MINIO_ROOT_USER=minio
-MINIO_ROOT_PASSWORD=minio123
-
-# MINIO CONSOLE
-MINIO_CONSOLE_PORT=8280
-
-# PHP
-PHP_OPCACHE_ENABLE=0
-PHP_UPLOAD_MAX_FILESIZE=2M
-PHP_MAX_EXECUTION_TIME=30
-PHP_POST_MAX_SIZE=8M
-PHP_MEMORY_LIMIT=128M
-OCTANE_SERVER=swoole
